re-add url to argocd-cm

--- a/kubernetes/omni/templates/manifests/argo_manifests.yaml
+++ b/kubernetes/omni/templates/manifests/argo_manifests.yaml
@@ -30039,6 +30039,7 @@ metadata:
   namespace: argocd
 data:
   kustomize.buildOptions: --enable-helm
+  url: https://argo.nmoura.pt
   oidc.config: |
     name: Cloudflare
     issuer: https://babybites.cloudflareaccess.com/cdn-cgi/access/sso/oidc/159144c9bfde3716e9abc653261cc2efc996aac6eb1743ae199ecda4a45a6988
