--- a/kubernetes/omni/templates/manifests/argo_manifests.yaml
+++ b/kubernetes/omni/templates/manifests/argo_manifests.yaml
@@ -30091,6 +30091,7 @@ metadata:
 data:
   policy.default: role:readonly
   policy.csv: |
+    g, nuno@babybites.pt, role:admin
     g, administrators, role:admin
 ---
 apiVersion: v1
