--- a/kubernetes/omni/templates/manifests/argo_manifests.yaml
+++ b/kubernetes/omni/templates/manifests/argo_manifests.yaml
@@ -30051,6 +30051,8 @@ data:
       - profile
       - groups
     requestedIDTokenClaims: {"groups": {"essential": true}}
+    enableUserInfoGroups: true
+    userInfoCacheExpiration: "5m"
     enablePKCEAuthentication: true
 ---
 apiVersion: v1
