expose traefik dashboard

--- a/kubernetes/apps/traefik/kustomization.yaml
+++ b/kubernetes/apps/traefik/kustomization.yaml
@@ -23,6 +23,10 @@ helmCharts:
     releaseName: traefik
     namespace: traefik
     valuesInline:
+      ports:
+        traefik:
+          expose:
+            default: true
       ingressRoute:
         dashboard:
           enabled: true
