fix: use null for boolean extraArgs flags

--- a/kubernetes/apps/external-dns/kustomization.yaml
+++ b/kubernetes/apps/external-dns/kustomization.yaml
@@ -23,9 +23,9 @@ helmCharts:
               name: cloudflare-api-token
               key: api-token
       extraArgs:
-        cloudflare-proxied: ""
+        cloudflare-proxied: null
         cloudflare-dns-records-per-page: "5000"
-        traefik-disable-legacy: ""
+        traefik-disable-legacy: null
       sources:
         - ingress
         - traefik-proxy
