deploy longhorn, add default TLSStore, add tunnel-config secret

--- a/kubernetes/apps/cloudflared/kustomization.yaml
+++ b/kubernetes/apps/cloudflared/kustomization.yaml
@@ -5,6 +5,7 @@ namespace: cloudflared
 resources:
   - namespace.yaml
   - sealedsecret.yaml
+  - tunnel-config.sealedsecret.yaml
 
 helmCharts:
   - name: cloudflare-tunnel-remote
