--- a/kubernetes/apps/traefik/kustomization.yaml
+++ b/kubernetes/apps/traefik/kustomization.yaml
@@ -4,6 +4,7 @@ namespace: traefik
 
 resources:
   - namespace.yaml
+  - default-tlsstore.yaml
   - https://raw.githubusercontent.com/traefik/traefik-helm-chart/v39.0.0/traefik/crds/traefik.io_ingressroutes.yaml
   - https://raw.githubusercontent.com/traefik/traefik-helm-chart/v39.0.0/traefik/crds/traefik.io_ingressroutetcps.yaml
   - https://raw.githubusercontent.com/traefik/traefik-helm-chart/v39.0.0/traefik/crds/traefik.io_ingressrouteudps.yaml
