--- a/kubernetes/apps/longhorn-system/kustomization.yaml
+++ b/kubernetes/apps/longhorn-system/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: longhorn
+namespace: longhorn-system
 
 resources:
   - namespace.yaml
@@ -11,7 +11,7 @@ helmCharts:
     repo: https://charts.longhorn.io
     version: 1.11.0
     releaseName: longhorn
-    namespace: longhorn
+    namespace: longhorn-system
     valuesInline:
       defaultSettings:
         defaultDataPath: /var/lib/longhorn
