--- a/kubernetes/apps/longhorn-system/kustomization.yaml
+++ b/kubernetes/apps/longhorn-system/kustomization.yaml
@@ -13,6 +13,8 @@ helmCharts:
     releaseName: longhorn
     namespace: longhorn-system
     valuesInline:
+      preUpgradeChecker:
+        jobEnabled: false
       defaultSettings:
         defaultDataPath: /var/lib/longhorn
         storageMinimalAvailablePercentage: 10
