add cloudflare-proxied annotation to longhorn ingressroute

--- a/kubernetes/apps/longhorn-system/ingressroute.yaml
+++ b/kubernetes/apps/longhorn-system/ingressroute.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: longhorn-system
   annotations:
     external-dns.alpha.kubernetes.io/target: <path:cloudflared:tunnel-config#tunnel-target>
+    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
 spec:
   entryPoints:
     - websecure
