add longhorn-single StorageClass (1 replica, Retain)

--- a/kubernetes/apps/longhorn-system/kustomization.yaml
+++ b/kubernetes/apps/longhorn-system/kustomization.yaml
@@ -5,6 +5,7 @@ namespace: longhorn-system
 resources:
   - namespace.yaml
   - ingressroute.yaml
+  - storageclass-single.yaml
 
 helmCharts:
   - name: longhorn
