move netboot behind traefik

--- a/portainer/stacks/netboot/docker-compose.yml
+++ b/portainer/stacks/netboot/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       WEB_APP_PORT: "3001"
       NGINX_PORT: "3002"
       TFTPD_OPTS: "--tftp-single-port"
+      DOMAIN: ${DOMAIN}
     volumes:
       - /volume2/docker/netboot/volumes/config:/config
       - /volume2/docker/netboot/volumes/assets:/assets
@@ -16,6 +17,10 @@ services:
       - "3002:3002"
     networks:
       - prod_net
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.whoami.rule=Host(`netboot.${DOMAIN}`)"
+      - "traefik.http.routers.whoami.entrypoints=web"
 
 networks:
   prod_net:
