--- a/portainer/stacks/traefik/docker-compose.yml
+++ b/portainer/stacks/traefik/docker-compose.yml
@@ -13,6 +13,19 @@ services:
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
       - "--entrypoints.web.address=:80"
+      
+  traefik_cloudflare_companion:
+    container_name: traefik_cloudflare_companion
+    image: tiredofit/traefik-cloudflare-companion:7.4.0
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock"
+    ports:
+      - "1734:80"
+    environment:
+      TARGET_DOMAIN: "${TARGET_DOMAIN}"
+      CF_TOKEN: ${CF_TOKEN}
+    networks:
+      - prod_net
 
 networks:
   prod_net:
