--- a/portainer/stacks/upload-assistant/docker-compose.yml
+++ b/portainer/stacks/upload-assistant/docker-compose.yml
@@ -9,8 +9,6 @@ services:
       UA_WEBUI_PORT: "5000"
       UA_BROWSE_ROOTS: "/data/torrents,/Upload-Assistant/tmp"
       UA_WEBUI_CORS_ORIGINS: ${UA_WEBUI_CORS_ORIGINS}
-    ports: 
-      - "1590:5000"
     volumes:
       - /volume1/data:/data
       - /volume2/docker/qbittorrent/volumes/config/data/BT_backup/:/torrent_storage_dir
@@ -20,6 +18,11 @@ services:
     command: -c "source /venv/bin/activate && python /Upload-Assistant/web_ui/server.py & tail -f /dev/null"
     networks:
       - prod_net
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.upload-assistant.rule=Host(`upload.${DOMAIN}`)"
+      - "traefik.http.routers.upload-assistant.entrypoints=web"
+      - "traefik.http.services.upload-assistant.loadbalancer.server.port=5000"
 
 networks:
   prod_net:
