set Grafana deployment strategy to Recreate to avoid RWO PVC Multi-Attach conflicts

--- a/kubernetes/apps/monitoring/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kustomization.yaml
@@ -55,6 +55,8 @@ helmCharts:
                   requests:
                     storage: 5Gi
       grafana:
+        deploymentStrategy:
+          type: Recreate
         persistence:
           enabled: true
           storageClassName: longhorn-single
