add ServiceMonitors and Grafana dashboards for Traefik, Longhorn, ArgoCD

--- a/kubernetes/apps/longhorn-system/kustomization.yaml
+++ b/kubernetes/apps/longhorn-system/kustomization.yaml
@@ -6,6 +6,8 @@ resources:
   - namespace.yaml
   - ingressroute.yaml
   - storageclass-single.yaml
+  - servicemonitor.yaml
+  - dashboard-longhorn.yaml
 
 helmCharts:
   - name: longhorn
