--- a/kubernetes/apps/argocd-config/servicemonitor.yaml
+++ b/kubernetes/apps/argocd-config/servicemonitor.yaml
@@ -7,15 +7,8 @@ metadata:
     app.kubernetes.io/part-of: argocd
 spec:
   selector:
-    matchExpressions:
-      - key: app.kubernetes.io/name
-        operator: In
-        values:
-          - argocd-application-controller
-          - argocd-server
-          - argocd-repo-server
-          - argocd-applicationset-controller
-          - argocd-notifications-controller
+    matchLabels:
+      app.kubernetes.io/part-of: argocd
   endpoints:
     - port: metrics
       interval: 30s
