enable Traefik Prometheus metrics endpoint

--- a/kubernetes/apps/traefik/kustomization.yaml
+++ b/kubernetes/apps/traefik/kustomization.yaml
@@ -26,6 +26,9 @@ helmCharts:
     releaseName: traefik
     namespace: traefik
     valuesInline:
+      metrics:
+        prometheus:
+          entryPoint: traefik
       ports:
         traefik:
           expose:
