add ServiceMonitors and dashboards for cert-manager, sealed-secrets, external-dns, Cilium

--- a/kubernetes/apps/cert-manager/kustomization.yaml
+++ b/kubernetes/apps/cert-manager/kustomization.yaml
@@ -8,6 +8,8 @@ resources:
   - domain-secret.yaml
   - clusterissuer.yaml
   - certificate.yaml
+  - servicemonitor.yaml
+  - dashboard-cert-manager.yaml
 
 helmCharts:
   - name: cert-manager
