add cloudflared metrics: Service, ServiceMonitor, and Grafana dashboard

--- a/kubernetes/apps/cloudflared/kustomization.yaml
+++ b/kubernetes/apps/cloudflared/kustomization.yaml
@@ -6,6 +6,9 @@ resources:
   - namespace.yaml
   - sealedsecret.yaml
   - tunnel-config.sealedsecret.yaml
+  - service-metrics.yaml
+  - servicemonitor.yaml
+  - dashboard-cloudflared.yaml
 
 helmCharts:
   - name: cloudflare-tunnel-remote
