--- a/kubernetes/apps/synology-csi/storageclass-iscsi.yaml
+++ b/kubernetes/apps/synology-csi/storageclass-iscsi.yaml
@@ -6,6 +6,6 @@ provisioner: csi.san.synology.com
 parameters:
   fsType: 'ext4'
   dsm: '192.168.202.1'
-  location: '/volume2/kubernetes'
+  location: '/volume2'
 reclaimPolicy: Retain
 allowVolumeExpansion: true
