synology-csi: disable chroot-dir, use --iscsiadm-path for Talos iscsi-tools compatibility

--- a/kubernetes/apps/synology-csi/kustomization.yaml
+++ b/kubernetes/apps/synology-csi/kustomization.yaml
@@ -19,7 +19,10 @@ helmCharts:
         name: client-info-secret
       images:
         plugin:
-          supportChrootDir: true
+          supportChrootDir: false
+      node:
+        extraArgs:
+          - --iscsiadm-path=/host/usr/local/sbin/iscsiadm
       storageClasses:
         synology-iscsi-storage:
           disabled: true
