--- a/kubernetes/apps/synology-csi/charts/synology-csi/templates/controller.yaml
+++ b/kubernetes/apps/synology-csi/charts/synology-csi/templates/controller.yaml
@@ -96,11 +96,12 @@ spec:
             - --csi-address=$(ADDRESS)
             - --timeout=60s
             - --v=5
+            - --extra-create-metadata
           env:
             - name: ADDRESS
               value: /var/lib/csi/sockets/pluginproxy/csi.sock
           {{- with .provisioner }}
-          image: {{ .image }}:{{ .tag }}
+          image: {{ .image.repository }}:{{ .image.tag }}
           imagePullPolicy: {{ .pullPolicy }}
           {{- end }}
           securityContext:
@@ -119,7 +120,7 @@ spec:
             - name: ADDRESS
               value: /var/lib/csi/sockets/pluginproxy/csi.sock
           {{- with .attacher }}
-          image: {{ .image }}:{{ .tag }}
+          image: {{ .image.repository }}:{{ .image.tag }}
           imagePullPolicy: {{ .pullPolicy }}
           {{- end }}
           securityContext:
@@ -138,7 +139,7 @@ spec:
             - name: ADDRESS
               value: /var/lib/csi/sockets/pluginproxy/csi.sock
           {{- with .resizer }}
-          image: {{ .image }}:{{ .tag }}
+          image: {{ .image.repository }}:{{ .image.tag }}
           imagePullPolicy: {{ .pullPolicy }}
           {{- end }}
           securityContext:
@@ -159,7 +160,7 @@ spec:
             - name: CSI_ENDPOINT
               value: unix:///var/lib/csi/sockets/pluginproxy/csi.sock
           {{- with .plugin }}
-          image: {{ .image }}:{{ .tag | default $.Chart.AppVersion }}
+          image: {{ .image.repository }}:{{ .image.tag | default $.Chart.AppVersion }}
           imagePullPolicy: {{ .pullPolicy }}
           {{- end }}
           securityContext:
