--- a/kubernetes/apps/synology-csi/charts/synology-csi/templates/node.yaml
+++ b/kubernetes/apps/synology-csi/charts/synology-csi/templates/node.yaml
@@ -67,6 +67,7 @@ spec:
       {{- with .affinity }}
       affinity: {{- toYaml . | nindent 8 }}
       {{- end }}
+      hostPID: true
       containers:
       {{- with $.Values.images }}
         - name: node-driver-registrar
@@ -84,7 +85,7 @@ spec:
             - name: REGISTRATION_PATH
               value: {{ $.Values.node.kubeletPath }}/plugins/csi.san.synology.com/csi.sock
           {{- with .nodeDriverRegistrar }}
-          image: {{ .image }}:{{ .tag }}
+          image: {{ .image.repository }}:{{ .image.tag }}
           imagePullPolicy: {{ .pullPolicy }}
           {{- end }}
           securityContext:
@@ -103,9 +104,6 @@ spec:
             {{- if .plugin.supportChrootDir }}
             - --chroot-dir=/host
             {{- end }}
-            {{- with $.Values.node.extraArgs }}
-            {{ toYaml . }}
-            {{- end }}
           env:
             - name: CSI_ENDPOINT
               value: unix://csi/csi.sock
@@ -114,7 +112,7 @@ spec:
                 fieldRef:
                   fieldPath: spec.nodeName
           {{- with .plugin }}
-          image: {{ .image }}:{{ .tag | default $.Chart.AppVersion }}
+          image: {{ .image.repository }}:{{ .image.tag | default $.Chart.AppVersion }}
           imagePullPolicy: {{ .pullPolicy }}
           {{- end }}
           securityContext:
