--- a/kubernetes/apps/synology-csi/charts/synology-csi/Chart.yaml
+++ b/kubernetes/apps/synology-csi/charts/synology-csi/Chart.yaml
@@ -7,6 +7,6 @@ keywords:
   - CSI Driver
 kubeVersion: ">= 1.20.0"
 sources:
-  - https://github.com/zebernst/synology-csi-talos/tree/main
+  - https://github.com/christian-schlichtherle/synology-csi-chart/tree/main
   - https://github.com/SynologyOpenSource/synology-csi/tree/main
-version: 0.10.0
+version: 0.9.3-SNAPSHOT # must be SemVer 2
