--- a/kubernetes/apps/synology-csi/charts/synology-csi/templates/node.yaml
+++ b/kubernetes/apps/synology-csi/charts/synology-csi/templates/node.yaml
@@ -67,7 +67,6 @@ spec:
       {{- with .affinity }}
       affinity: {{- toYaml . | nindent 8 }}
       {{- end }}
-      hostPID: true
       containers:
       {{- with $.Values.images }}
         - name: node-driver-registrar
@@ -85,7 +84,7 @@ spec:
             - name: REGISTRATION_PATH
               value: {{ $.Values.node.kubeletPath }}/plugins/csi.san.synology.com/csi.sock
           {{- with .nodeDriverRegistrar }}
-          image: {{ .image.repository }}:{{ .image.tag }}
+          image: {{ .image }}:{{ .tag }}
           imagePullPolicy: {{ .pullPolicy }}
           {{- end }}
           securityContext:
@@ -104,6 +103,9 @@ spec:
             {{- if .plugin.supportChrootDir }}
             - --chroot-dir=/host
             {{- end }}
+            {{- with $.Values.node.extraArgs }}
+            {{ toYaml . }}
+            {{- end }}
           env:
             - name: CSI_ENDPOINT
               value: unix://csi/csi.sock
@@ -112,7 +114,7 @@ spec:
                 fieldRef:
                   fieldPath: spec.nodeName
           {{- with .plugin }}
-          image: {{ .image.repository }}:{{ .image.tag | default $.Chart.AppVersion }}
+          image: {{ .image }}:{{ .tag | default $.Chart.AppVersion }}
           imagePullPolicy: {{ .pullPolicy }}
           {{- end }}
           securityContext:
