synology-csi: disable chroot-dir flag (zebernst fork uses nsenter instead)

--- a/kubernetes/apps/synology-csi/kustomization.yaml
+++ b/kubernetes/apps/synology-csi/kustomization.yaml
@@ -21,7 +21,7 @@ helmCharts:
         plugin:
           image:
             tag: v1.2.0
-          supportChrootDir: true
+          supportChrootDir: false
       storageClasses:
         synology-iscsi:
           reclaimPolicy: Retain
