synology-csi: add Grafana dashboard for CSI health and PV/PVC monitoring

--- a/kubernetes/apps/synology-csi/kustomization.yaml
+++ b/kubernetes/apps/synology-csi/kustomization.yaml
@@ -5,6 +5,7 @@ namespace: synology-csi
 resources:
   - namespace.yaml
   - client-info.sealedsecret.yaml
+  - dashboard-synology-csi.yaml
 
 helmGlobals:
   chartHome: charts
