monitoring: disable kubeProxy/kubeScheduler/kubeControllerManager (Talos false positives)

--- a/kubernetes/apps/monitoring/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kustomization.yaml
@@ -130,3 +130,9 @@ helmCharts:
         enabled: true
       kubeStateMetrics:
         enabled: true
+      kubeProxy:
+        enabled: false
+      kubeScheduler:
+        enabled: false
+      kubeControllerManager:
+        enabled: false
